# self-evolving-outreach-agent

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agents/: checkpointer.py  content_agent.py  cycle_manager.py  deployment_agent.py  feedback_agent.py  graph.py  linkedin_post_agent.py  mcp_config_agent.py  orchestrator.py  prospect_discovery.py  prospect_manager.py  reply_classifier.py  segment_agent.py
backend/app/api/: campaign.py  health.py  mcp.py  prospects.py  webhooks.py
backend/app/core/: config.py  llm.py
backend/app/db/: __init__.py  client.py  collections.py  crud.py
backend/app/mcp/: __init__.py  manager.py  models.py  registry.py
backend/app/memory/: __init__.py  manager.py
backend/app/models/: __init__.py  campaign_state.py  intelligence.py  prospect.py  research.py  ui_frames.py
backend/app/tools/: __init__.py  mcp_tools.py  research_policy.py  resend_client.py  search.py  unipile_client.py
backend/tests/: conftest.py  test_campaign_api.py  test_cycle_manager.py  test_deployment_agent.py  test_feedback_agent.py  test_graph.py  test_memory_manager.py  test_models.py  test_orchestrator.py  test_prospect_discovery.py  test_prospect_manager.py  test_research.py  test_segment_agent.py  test_tools_search.py  test_unipile_client.py  test_webhooks.py
backend/tests/integration/: conftest.py  test_api_campaign.py  test_content_e2e.py  test_db_crud.py  test_orchestrator_gemini.py  test_research_e2e.py  test_segment_e2e.py  test_webhooks.py
(+51 files in other folders)
