[project]
name = "signal-to-action-backend"
version = "0.1.0"
description = "Self-evolving outreach agent — closed-loop multi-agent growth intelligence"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "langgraph>=0.4.0",
    "langchain-google-genai>=2.1.0",
    "motor>=3.7.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "python-dotenv>=1.1.0",
    "httpx>=0.28.0",
    "tavily-python>=0.5.0",
    "websockets>=15.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m not integration')",
]
testpaths = ["tests"]
